NEXT
 - Support previous versions of config files with url params
 - Add get_people method

1.0101
 - Normalise url and site_url to just url

1.0100 - 2014-08-25
 - Retrieve all custom fields
 - Added trello fields to custom fields
 - Added search facility
 - Added case update
 - Added scout last Occcurence field

1.0002 - 2013-09-12
 - Prevent tests running under smoke test from prompting.

1.0001 - 2013-08-07
 - Added dependency list
 - Added Repository to meta
 - Fix typos in POD

1.0000 - 2013-08-06
 - Rename namespace to match existing WebService::FogBugz dist
 - Add prompting support