@@ -1,6 +1,7 @@
 NEXT
  - Support previous versions of config files with url params
  - Add get_people method
+ - Add assignee attribute to Case
 
 1.0101
  - Normalise url and site_url to just url
